--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:iphone7": "ionic cordova run ios --target='iPhone-7, 12.1' -- -buildFlag='-UseModernBuildSystem=0'",
+    "start:iphonex": "ionic cordova run ios --target='iPhone-X, 12.1' -- -buildFlag='-UseModernBuildSystem=0'",
     "build": "ng build",
+    "build:ios": "ionic cordova build ios --prod -- -buildFlag='-UseModernBuildSystem=0'",
+    "build:web": "ionic build --engine=browser --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -22,6 +26,7 @@
     "@angular/router": "~7.1.4",
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/geolocation": "^5.0.0-beta.23",
+    "@ionic-native/network": "^5.0.0-beta.23",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-rc.0",
@@ -31,6 +36,7 @@
     "cordova-plugin-geolocation": "4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-network-information": "2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -78,7 +84,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To determine the location for which to get weather data"
-      }
+      },
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "android"
