--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/http": "~7.1.4",
     "@angular/platform-browser": "~7.1.4",
     "@angular/platform-browser-dynamic": "~7.1.4",
+    "@angular/pwa": "^0.12.0",
     "@angular/router": "~7.1.4",
+    "@angular/service-worker": "~7.1.4",
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/geolocation": "^5.0.0-beta.23",
     "@ionic-native/network": "^5.0.0-beta.23",
